--- a/proportal/src/css/sass/proportal.scss
+++ b/proportal/src/css/sass/proportal.scss
@@ -30,6 +30,12 @@
 @import "partials/graph";
 @import "partials/phyloviewer";
 @import "partials/phylogram";
+@import "partials/infoBox";
+@import "partials/pageTitle";
+@import "partials/buttonBar";
+@import "partials/pageHeader";
+@import "partials/grid";
+
 // print style
 @import "partials/print";
 
