--- a/proportal/views/pages/taxon_details.tt
+++ b/proportal/views/pages/taxon_details.tt
@@ -3,179 +3,9 @@
 	self = results.taxon;
 %]
 
-<style>
-
-/* RESPONSIVE GRID SIZING  */
-
-/* Resets */
-*,
-*:before,
-*:after {
-	box-sizing: border-box;
-}
-
-.clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-.row {
-	display: flex;
-	flex-flow: row wrap;
-	margin: 0 -10px;
-	margin-bottom: 10px;
-}
-
-.row:last-child {
-	margin-bottom: 0;
-}
-
-[class*="col-"] {
-	padding: 10px;
-	width: 100%;
-
-}
-
-
-/* Small screen */
-@media all and (max-width: 1023px) {
-  .infoBox {
-    width: 100%;
- 	margin-left: 0;
- 	margin-right: 0;
-  }
-}
-
-/* Large screen */
-@media all and (min-width: 1024px) {
-	.infoBox {
-		width: 50%;
-	}
-}
-
-
-/* GLOBAL */
-h2, h3, h4, h5, h6 {
- 	margin: 0;
- 	padding: 0;
-
-}
-
-tr,td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-}
-
-.align-right {
-	text-align: right;
-	vertical-align: bottom;
-}
-
-button {
-	padding: 10px 20px 10px 20px;
-}
-
-.normal {
-	font-weight: normal;
-}
-
-.border {
-	border: 1px solid blue;
-}
-
-.underline {
-	border-bottom: 2px solid black;
-}
-
-.thisWrapper {
-}
-
-#pageHeader {
-	display: table;
-	padding: 0 10px;
-	margin-top: 20px;
-	width: 100%;
-}
-
-#title {
-	float: left;
-	width: 100%;
-}
-
-#buttonBar {
-	float: right;
-	clear: both;
-}
-
-
-/* INFOBOX
-
-	+---------------div-------------+		div .infoBox
-	|	+-----------div---------+	|
-	|	|   TITLE				|	|		div .infoTableTitle
-	|	+-----------div---------+	|
-	|								|
-	|	+----------table--------+	|		table .infoBox
-	|	|	fields here			|	|
-	|	+-----------------------+	|
-	+-------------------------------+
- */
-
-.infoBox {
-	padding: 0 20px 20px 20px;
-
-
-}
-
-.infoBoxTitle {
-	border-bottom: 2px solid black;
-	margin: 10px 0 5px 0;
-}
-
-.infoBox table {
-	table-layout: fixed;
-	width: 100%;
-	border-collapse: collapse;
-}
-
-.infoBox td{
-	padding: 4px 0px 4px 0px;
-}
-
-.col1 {
-	width: 200px;
-}
-
-.subheader {
-	margin-top: 10px;
-}
-.noteToSelf {
-	background-color: #FFFF99;
-	font-style: italic;
-	padding: 0.3em 1em 0.3em 1em;
-	display: inline;
-}
-.help {
-	background-color: #8899dd;
-	color: white;
-	font-weight: bold;
-	border-radius: 12px;
-	padding: 0.1em 0.3em 0.1em 0.3em;
-	/* margin: 0.2em; */
-	display: inline;
-	float: right;
-}
-
-button {
-	padding: 10px;
-	font-size: 75%;
-}
-</style>
 <div class="thisWrapper">
 	<div id="pageHeader">
-		<div id="title" class="underline">
+		<div id="pageTitle" >
 			<!-- Write genome type -->
 			<h4 class="normal">
 			[% IF self.genome_type=="isolate"; %]
