--- a/proportal/src/css/sass/modules/_typo.scss
+++ b/proportal/src/css/sass/modules/_typo.scss
@@ -3,8 +3,13 @@
 
 h1, h2, h3, h4, h5, h6, caption, .h2, .h3, .h4, .h5, .h6 {
 	font-family: $typeface-display;
-	padding: 0;
-	margin: 0 0 $line-ht;
+// 	padding: 0;
+// 	margin: 0 0 $line-ht;
+	
+	// from taxon_details.tt
+	margin: 0;
+ 	padding: 0;
+
 }
 
 /** "Golden rhythm" font sizes
