--- a/proportal/views/inc/page_head.tt
+++ b/proportal/views/inc/page_head.tt
@@ -7,3 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="The IMG ProPortal provides data and visualisations on Prochlorococcus, Synechococcus, and related species and metagenome data.">
+[%
+	IF page_head_img;
+		PROCESS 'inc/page_head_img.tt';
+	END;
+%]
