--- a/proportal/views/layouts/default.html.tt
+++ b/proportal/views/layouts/default.html.tt
@@ -35,7 +35,7 @@
 	<article class="content cf" role="main">
 [%
 	IF settings.message;
-	#	PROCESS 'inc/message.tt';
+		PROCESS 'inc/message.tt';
 	END;
 	content;	# the page content
 
