--- a/proportal/views/layouts/default_wide.html.tt
+++ b/proportal/views/layouts/default_wide.html.tt
@@ -29,7 +29,7 @@
 	<article class="content cf full" role="main">
 [%
 	IF settings.message;
-	#	PROCESS 'inc/message.tt';
+		PROCESS 'inc/message.tt';
 	END;
 	content;	# the page content
 
