Adding some pieces to the gene details template for clarity

--- a/proportal/views/inc/debug.tt
+++ b/proportal/views/inc/debug.tt
@@ -5,8 +5,8 @@
 		dumper.dump( results );
 	END;
 
-	IF settings;
-		dumper.dump( settings );
-	END;
+#	IF settings;
+#		dumper.dump( settings );
+#	END;
 %]
 </pre>
