--- a/proportal/public/css/styleGuide.scss
+++ b/proportal/public/css/styleGuide.scss
@@ -10,14 +10,14 @@ $font-weight_sg: lighter;
 $padding_sg: 50px;
 $sidebar_width: 300px;
 
-
-
-// COLORS
+// Style guide colors
 $font-color_sg: #959595;
 $bg-color: #648caa;
 
 $line_sg: 2px solid $font-color_sg;
 
+
+// PROPORTAL VARIABLES
 
 $color1: #648caa; 	// rgb(100,140,170);	// map-get( $jgi-palette, dk_blue );
 $color2: #d3691b;	//map-get( $jgi-palette, reddish);	// 	#d3691b, // rgb(211,105,27);
@@ -26,6 +26,17 @@ $color4: #fdba57;	//map-get( $jgi-palette, lite_or); 	//	#fdba57 // rgb(253,186,
 $color5: #343434; 	//map-get( $jgi-palette, black);	//	#343434, // rgb(52,52,52);
 $color6: #5a5a5a;	//map-get( $jgi-palette, dk_grey); 	//	#5a5a5a, // rgb(90,90,90);
 $color7: #919090;	//map-get( $jgi-palette, midgrey); 	//	#919090, // rgb(145,144,144);
+
+// Element outline.
+$element-border-width: 3px;
+$element-border-color: $color7;
+
+// Button colors
+$pp_btn_std_color: $color1;
+$pp_btn_orange_color: $color2;
+$pp_btn_disabled_color: $color7;
+
+
 
 
 // STYLEGUIDE SECTIONS
@@ -55,13 +66,18 @@ $color7: #919090;	//map-get( $jgi-palette, midgrey); 	//	#919090, // rgb(145,144
 }
 
 #sidebar {
+// 	background: cyan;
+	 
 	float:left;
 	width: $sidebar_width;
 	padding: $padding_sg;
 	padding-top: 60px;
+// 	 position: absolute;
+    top: 10px;
 	position: -webkit-sticky;  // required for Safari
 	position: sticky;
 	top: 0; // required as well.
+	
 }
 
 #footer {
@@ -90,7 +106,7 @@ section {
   font-variant: $font-variant_sg;
   font-weight: $font-weight_sg;
   color: $font-color_sg;
-  font-style: normal;
+//   font-style: normal;
 }
 
 p.sg {
@@ -115,29 +131,26 @@ ul.nav_sg {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 	
-	> li {
-		float: left;
-		clear: both;
-	
-		> a {
+	li {	list-style:none; 	}
+
+	a {
+		display: block;
+		color: $font-color_sg;
+		font-family: $font-family_sg;
+		font-variant: $font-variant_sg;
+		font-weight: $font-weight_sg;
+		font-size: 1.5rem;
+		padding-bottom: 15px;
+
+		&:hover {
 			display: block;
-			color: $font-color_sg;
-			font-family: $font-family_sg;
-			font-variant: $font-variant_sg;
-			font-weight: $font-weight_sg;
-			font-size: 1.5rem;
-			padding: 10px 0;
-			
-			&:hover {
-				display: block;
-				color: darken( $font-color_sg, 20% )
-				
-			}
+			color: darken( $font-color_sg, 20% )
 		}
-	
 	}
+	
+	ul a {	font-size: 1.25rem;		}
+
 }	
 
 // STYLEGUIDE COLORSWATCH LIST
@@ -147,16 +160,16 @@ ul.colorSwatch-list_sg {
 	margin: 0;
 	padding: 0;
 	
-	> li {
+	li {
 		text-align: center;
 		margin: 0 20px 20px 0;
 		float: left;
-	
-		> a {
-			display: block;
-		}
 	}
 	
+	a {
+		display: block;
+	}
+			
 	.colorSwatch_sg {
 		position: relative;
 		padding: 20px;
@@ -197,20 +210,14 @@ ul.colorSwatch-list_sg {
 //----------------------------------------------------------------------
 
 
-// PP VARIABLES
-
-$element-border-width: 3px;
-
-
-
 // PP BUTTONS
 button, 
 html input[type="button"], 
 	input[type="reset"], 
 	input[type="submit"]{
 	
-//   background: $color2;	// lite_or
-//   color: white;
+  background: $color2;	// lite_or
+  color: white;
   
   font-size: 14px;
   padding: 0.75rem 1.5rem;
@@ -224,51 +231,78 @@ html input[type="button"],
   }
 }
 
-
-.pp_standard {
-  background: $color1;	// lite_or
+// Buttons with solid color backgrounds, white text
+.pp_btn_std {
+  background: $pp_btn_std_color;	// lite_or
   color: white;
   
   &:hover {
-  	background: darken( $color1, 10% );
+  	background: darken( $pp_btn_std_color, 10% );
   }
 }
 
-.pp_clicked {
-	background: white;
-	color: $color1;
-	border: $element-border-width solid $color1;
-	
-  &:hover {
-  	color: darken( $color1, 10% );
-  	background: white;
-  	border: $element-border-width solid darken( $color1, 10% );
-  }	
-}
-
-.pp_orange {	
-  background: $color2;	// lite_or
+.pp_btn_orange {	
+  background: $pp_btn_orange_color;	// lite_or
   color: white;
 	
   &:hover {
-  	background: darken( $color1, 10% );
+  	background: darken( $pp_btn_orange_color, 10% );
   }	 
 }
 
-.pp_disabled {	
-  background: $color7;	// midgrey
+.pp_btn_disabled {	
+  background: $pp_btn_disabled_color;	// midgrey
   color: white;
   
   &:hover {	
-  	background: $color7;
+  	background: $pp_btn_disabled_color;
   }
 }
 
-.pp_add {
+// Buttons with white background, outlined in various colors with matching text.
+
+.pp_btn_std_outline {
+	background: white;
+	color: $pp_btn_std_color;
+	border: $element-border-width solid $pp_btn_std_color;
+	
+  &:hover {
+  	color: darken( $pp_btn_std_color, 10% );
+  	background: white;
+  	border: $element-border-width solid darken( $pp_btn_std_color, 10% );
+  }	
+}
+
+.pp_btn_orange_outline {
+	background: white;
+	color: $pp_btn_orange_color;
+	border: $element-border-width solid $pp_btn_orange_color;
+	
+  &:hover {
+  	color: darken( $pp_btn_orange_color, 10% );
+  	background: white;
+  	border: $element-border-width solid darken( $pp_btn_orange_color, 10% );
+  }	
+}
+
+.pp_btn_disabled_outline {
+	background: white;
+	color: $pp_btn_disabled_color;
+	border: $element-border-width solid $pp_btn_disabled_color;
+	
+  &:hover {
+  	color: darken( $pp_btn_disabled_color, 10% );
+  	background: white;
+  	border: $element-border-width solid darken( $pp_btn_disabled_color, 10% );
+  }	
+}
+
+.pp_btn_add {
 	display: inline-block;
-	width: 35px;
-	height: 35px;
+	width: 30px;
+	height: 30px;
 	padding: 0;
+	margin: 0;
 	background: $color1;
 	
 	font-size: 24px;
@@ -286,27 +320,28 @@ html input[type="button"],
   	}	
 }
 
-.pp_remove {
+.pp_btn_remove {
 	display: inline-block;
-	width: 35px;
-	height: 35px;
+	width: 30px;
+	height: 30px;
 	padding: 0;
+	margin: 0;
 	background: $color1;
-	
 	font-size: 24px;
-// 	text-align: center;
-// 	vertical-align: middle;
 	
 	&:hover {
-// 		color: darken( $color1, 10% );
 		background: darken( $color1, 10% );
 		border: 3px solid darken( $color1, 10% );
   	}	
 }
 
+// PROPORTAL TABLE
+
 table.pp_table{
 	width: 0;
-
+	padding: 0;
+	margin: 0;
+	
 	tr {
 		
 	}
@@ -314,13 +349,237 @@ table.pp_table{
 	th {
 		text-align: left;
 		border-bottom: 2px solid $color6;
+		padding: 10px 20px;
+// 		border: 1px solid $color5;
+		
+	}
+	
+	td {
+		padding: 10px 20px;
+// 		border: 1px solid $color5;
 	}
 	
 }
 
+// PROPORTAL TABS
 
+/* https://webdesignerhut.com/create-pure-css-tabs/ */
 
+// A standard tab style.
+.pp_nav_tabs_std {
+    float: none;
+    list-style: none;
+    position: relative; 
+    min-height: 200px;
+    margin: 25px 0;
 
+    > label {
+     	display: block;
+		float: left;
+		position: relative;
+		padding: 15px 20px;
+		margin-right: 10px;
+  		top: $element-border-width - 1;
+		
+		font-size: 14px;
+		background: white;
+		color: $element-border-color;
+		border: $element-border-width solid $element-border-color;
+		text-transform: uppercase;
+		vertical-align: middle;
+		line-height: 1.5rem;
+  
+// 		-webkit-transition: all 0.5s; 
+// 		transition: all 0.2s;
+		
+		&:hover {
+			color: darken( $element-border-color, 20% );
+			border: $element-border-width solid darken( $element-border-color, 20% );
+			border-bottom: $element-border-width solid $element-border-color;
+		}
+    }
+        
+    > input[type=radio] {	display: none;	}
+    
+    //"std_tab" this string must match the input id in the html... this is not very generic.
+    // need to figure out how to make this flexible.
+    > [id^="std_tab"]:checked + label {	border-bottom: $element-border-width solid transparent;	} 
+	
+	.tab-content {
+		display: none;
+		
+		width: 100%;
+		float: left;	
+		border-top: $element-border-width solid $element-border-color; 	// This codes the line at the base of the tabs
+		background: white;
+		padding: 20px 0;
+		
+		// This is specifically styled to display FASTA data... not very generic.
+		textarea { 
+			font-family: Menlo, Consolas, "DejaVu Sans Mono", Monaco, monospace; /* $typeface-fixed-width  */  
+			font-size: 1rem;	/* $font-size; */
+			color: #444;	/* $text-color: #444; */
+			overflow-y: scroll;
+			height: 450px;
+			width: 100%;
+			resize: none;
+			wrap: hard;
+			padding: 1em;
+			border: 2px solid #5a5a5a;
+			//autofocus;		// BROKEN
+		}  
+	}
+	
+	> #std_tab1:checked ~ #tab-content1_std,
+	> #std_tab2:checked ~ #tab-content2_std,
+	> #std_tab3:checked ~ #tab-content3_std,
+	> #std_tab4:checked ~ #tab-content4_std {
+		display: block;
+	}
+}
 
+// A minimal tab style a la the Mailchimp style: http://ux.mailchimp.com/patterns/navigation#tabs 
+.pp_nav_tabs_minimal {
+    float: none;
+    list-style: none;
+    position: relative; 
+    min-height: 200px;
+    margin: 25px 0;
 
+    > label {
+     	display: block;
+		float: left;
+		position: relative;
+		padding: 15px 20px;
+		margin-right: 10px;
+   		top: $element-border-width - 1;
+		vertical-align: middle;
+		line-height: 1.5rem;
+		
+		font-size: 14px;
+		text-transform: uppercase;
+		background: white;
+		color: $element-border-color;
+ 		border-bottom: $element-border-width solid transparent;
+  		
+// 		-webkit-transition: all 0.5s; 
+// 		transition: all 0.2s;
+		
+		&:hover {
+			color: darken( $element-border-color, 50% );
+// 			border-bottom: $element-border-width solid darken( $element-border-color, 20% );
+		}
+    }
+        
+    > input[type=radio] {	display: none;	}
+    
+    //"min_tab" this string must match the input id in the html... this is not very generic.
+    // need to figure out how to make this flexible.
+    > [id^="min_tab"]:checked + label {	
+    	color: darken( $element-border-color, 50% );
+    	border-bottom: $element-border-width+2 solid darken( $element-border-color, 50% );	
+    } 
+	
+	> .tab-content {
+		display: none;
+		
+		width: 100%;
+		float: left;	
+		border-top: $element-border-width solid $element-border-color; 	// This codes the line at the base of the tabs
+		background: white;
+		padding: 20px 0;
+		
+		// This is specifically styled to display FASTA data... not very generic. Use a div?
+		textarea { 
+			font-family: Menlo, Consolas, "DejaVu Sans Mono", Monaco, monospace; /* $typeface-fixed-width  */  
+			font-size: 1rem;	/* $font-size; */
+			color: #444;	/* $text-color: #444; */
+			overflow-y: scroll;
+			height: 450px;
+			width: 100%;
+			resize: none;
+			wrap: hard;
+			padding: 1em;
+			border: 2px solid #5a5a5a;
+			//autofocus;		// BROKEN
+		}  
+	}
 
+	> #min_tab1:checked ~ #tab-content1_min,
+	> #min_tab2:checked ~ #tab-content2_min,
+	> #min_tab3:checked ~ #tab-content3_min,
+	> #min_tab4:checked ~ #tab-content4_min {
+		display: block;
+	}
+}
+
+// A pill tab style.  A bit more colorful than the other two styles.
+.pp_nav_tabs_pill {
+    float: none;
+    list-style: none;
+    position: relative; 
+    min-height: 200px;
+    margin: 25px 0;
+
+    > label {
+     	display: block;
+		float: left;
+		position: relative;
+		padding: 15px 20px;
+		margin: 0 10px 10px 0;
+		vertical-align: middle;
+		line-height: 1.5rem;
+		
+		font-size: 14px;
+		text-transform: uppercase;
+		background: white;
+		color: $element-border-color;
+ 		border-bottom: $element-border-width solid transparent;
+		
+		&:hover {
+			color: darken( $element-border-color, 50% );
+		}
+    }
+        
+    > input[type=radio] {	display: none;	}
+    
+    //"min_tab" this string must match the input id in the html... this is not very generic.
+    // need to figure out how to make this flexible.
+    > [id^="pill_tab"]:checked + label {	
+    	background: $color1;
+    	color: white; //darken( $element-border-color, 50% );
+    	border-radius: 5px;	
+    } 
+	
+	> .tab-content {
+		display: none;
+		
+		width: 100%;
+		float: left;	
+		border-top: $element-border-width solid $element-border-color; 	// This codes the line at the base of the tabs
+		background: white;
+		padding: 20px 0;
+		
+		// This is specifically styled to display FASTA data... not very generic. Use a div?
+		textarea { 
+			font-family: Menlo, Consolas, "DejaVu Sans Mono", Monaco, monospace; /* $typeface-fixed-width  */  
+			font-size: 1rem;	/* $font-size; */
+			color: #444;	/* $text-color: #444; */
+			overflow-y: scroll;
+			height: 450px;
+			width: 100%;
+			resize: none;
+			wrap: hard;
+			padding: 1em;
+			border: 2px solid #5a5a5a;
+			//autofocus;		// BROKEN
+		}  
+	}
+
+	> #pill_tab1:checked ~ #tab-content1_pill,
+	> #pill_tab2:checked ~ #tab-content2_pill,
+	> #pill_tab3:checked ~ #tab-content3_pill,
+	> #pill_tab4:checked ~ #tab-content4_pill {
+		display: block;
+	}
+}
